# trabalho1_aeds2

./: CMakeLists.txt  classificacaoInterna.c  classificacaoInterna.h  employee.c  employee.h  intercalacaoBasica.c  intercalacaoBasica.h  main.c  menu.c  menu.h  pontos.c  pontos.h  shuffle  utils.c  utils.h
